# Course-Design-Assignment-C-Object-Oriented

./: .gitignore  FEATURES_SUMMARY.md  README.md
1/: 1.1  1.1.cpp  1.4  1.4.cpp  1.8  1.8.cpp
2/: 2.1  2.1.cpp  2.2  2.2.cpp  2.3  2.3.cpp
3/: 3.1  3.1.cpp  3.2  3.2.cpp  3.3  3.3.cpp
4/: 4.3  4.3.cpp  4.4  4.4.cpp  4.5  4.5.cpp
5/: 5.1  5.1.cpp  5.2  5.2.cpp  5.3  5.3.cpp
6/: 6.1  6.1.cpp  6.2  6.2.cpp  6.3  6.3.cpp
sys/: LICENSE.txt  README.md  TECHNICAL_DOCUMENTATION.md  requirement.txt  run.txt  start_server.sh  watchdog.sh
sys/database/: init.sql  more_data.sql
sys/frontend/: app.js  debug.html  index.html  pet.js  test_drag.html
sys/server/: CMakeLists.txt
sys/server/include/: db.hpp  http_server.hpp  json.hpp
sys/server/src/: db.cpp  http_server.cpp  main.cpp
test/: 002  002.cpp  003.cpp  01  01.cpp  Volume.cpp  goods  goods.cpp
test_intelledu/: login.html
